[package]
name = "redstone"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.14.0"
prost = "0.14.0"
tokio = { version = "1", features = ["full"] }
bytes = "1.11.1"
tonic-prost = "0.14.0"
parking_lot = "0.12.0"
twox-hash = "2.1.2"

[dev-dependencies]
rand = "0.10.0"
criterion = { version = "0.5", features = ["async"] }

[build-dependencies]
tonic-prost-build = "0.14"

[[bin]]
name = "redstone_server"
path = "src/bin/redstone_server.rs"

[[bin]]
name = "redstone_client"
path = "src/bin/redstone_client.rs"

[[bench]]
name = "single_node_benchmark"
harness = false